[gd_scene load_steps=3 format=3 uid="uid://dwvr2uwd4304a"]

[ext_resource type="Script" path="res://src/scripts/text_box.gd" id="1_d22lg"]
[ext_resource type="Texture2D" uid="uid://k2b6ac27g36w" path="res://assets/my/dialog_box.png" id="1_r1er2"]

[node name="TextBox" type="MarginContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_d22lg")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 2
texture = ExtResource("1_r1er2")
region_rect = Rect2(0, 0, 48, 48)
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="Label" type="Label" parent="MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
vertical_alignment = 1

[node name="LetterDisplayTimer" type="Timer" parent="."]
one_shot = true

[node name="ChatTimer" type="Timer" parent="."]

[connection signal="timeout" from="LetterDisplayTimer" to="." method="_on_letter_display_timer_timeout"]
[connection signal="timeout" from="ChatTimer" to="." method="_on_chat_timer_timeout"]
